--- a/Docker/Dockerfile.centos7
+++ b/Docker/Dockerfile.centos7
@@ -1,4 +1,4 @@
-# The ACM_DOCKER_VERSION definition is used by
+# The DOCKER_IMAGE_VERSION definition is used by
 # the scripts/gen-docker-image.sh to grab the
 # Dockerfile version
 #
@@ -259,10 +259,6 @@ VOLUME /workspace-dev
 # ENV DB_PASSWORD=root
 # ENV DB_PORT=3306
 # ENV DB_USER=root
-# ENV NODE_ENV=development
-# ENV REDIS_HOST=redis
-# ENV REDIS_PASS=redis
-# ENV REDIS_PORT=6379
 # ENV API_BASE_URL=${API_BASE_URL}
 
 # ==========
