--- a/Docker/docker-compose-centos7.yml
+++ b/Docker/docker-compose-centos7.yml
@@ -1,12 +1,12 @@
 version: "1.0"
 services:
-  centos7-dev:
+  centos7:
     image: openca.org/dev/centos7:latest
     ports:
       - "127.0.0.1:80:8000"
     volumes:
       - type: bind
-        source: ../
+        source: ${PWD}
         target: /workspace
     environment:
       - API_BASE_URL=${API_BASE_URL}
@@ -14,5 +14,4 @@ services:
     tty: true
 networks:
   default:
-    external:
-      name: dev-network
+    name: dev-network
