--- a/Docker/Dockerfile.ubuntu22-base
+++ b/Docker/Dockerfile.ubuntu22-base
@@ -242,6 +242,10 @@ RUN DEBIAN_FRONTEND=noninteractive \
 # Environment
 ENV NODE_ENV            development
 
+# Copies the OQS-enabled openssl config
+RUN mkdir -p ${DEST_DIR}/ssl
+COPY /workspace/openssl.conf /opt/libpki-ossl3/ssl
+
 # ==========
 # Final Note
 # ==========
