--- a/Docker/Dockerfile.ubuntu24-libpki
+++ b/Docker/Dockerfile.ubuntu24-libpki
@@ -7,9 +7,6 @@
 # Begin: Pre-Requisites
 # =====================
 
-# Argument for build only (Global across "FROM")
-ARG DEV_BUILD
-
 # Initial Setup
 FROM openca.org/ubuntu24-oqs:latest
 
@@ -23,23 +20,26 @@ ARG LC_ALL     C
 ENV IDE_BUILD=${DEV_BUILD}
 
 # Install Directory for most components
-ENV DEST_DIR /opt/pqc
+ENV DEST_DIR=/opt/pqc
 
 # Git Repo Setup Variables
-ENV LIBPKI_TMP_DIR              /tmp
-ENV LIBPKI_PQC_ARCH             zip
-ENV LIBPKI_PQC_BRANCH           main
-ENV LIBPKI_PQC_REPO             libpki-pqc
-ENV LIBPKI_PQC_GITHUB_BASE_URL  https://codeload.github.com/opencrypto
+ENV LIBPKI_TMP_DIR=/tmp
+ENV LIBPKI_PQC_ARCH=zip
+ENV LIBPKI_PQC_BRANCH=main
+ENV LIBPKI_PQC_REPO=libpki-pqc
+ENV LIBPKI_PQC_GITHUB_BASE_URL=https://codeload.github.com/opencrypto
 
 # Git Download Variables
-ENV LIBPKI_PQC_DIR              ${LIBPKI_TMP_DIR}/${LIBPKI_PQC_REPO}-${LIBPKI_PQC_BRANCH}
-ENV LIBPKI_PQC_URL              ${LIBPKI_PQC_GITHUB_BASE_URL}/${LIBPKI_PQC_REPO}/${LIBPKI_PQC_ARCH}/refs/heads/${LIBPKI_PQC_BRANCH}
-ENV LIBPKI_PQC_ARCH_FILE        ${LIBPKI_TMP_DIR}/${LIBPKI_PQC_REPO}-${LIBPKI_PQC_BRANCH}.${LIBPKI_PQC_ARCH}
+ENV LIBPKI_PQC_DIR=${LIBPKI_TMP_DIR}/${LIBPKI_PQC_REPO}-${LIBPKI_PQC_BRANCH}
+ENV LIBPKI_PQC_URL=${LIBPKI_PQC_GITHUB_BASE_URL}/${LIBPKI_PQC_REPO}/${LIBPKI_PQC_ARCH}/refs/heads/${LIBPKI_PQC_BRANCH}
+ENV LIBPKI_PQC_ARCH_FILE=${LIBPKI_TMP_DIR}/${LIBPKI_PQC_REPO}-${LIBPKI_PQC_BRANCH}.${LIBPKI_PQC_ARCH}
 
 # Alternatively you can use the helper script build-debug.sh
 # instead of the usual ./build.sh
-ENV BUILD_SCRIPT ./build-debug.sh
+ENV BUILD_SCRIPT=./build-debug.sh
+
+# Sets the OpenSSL Root Directory
+ENV OPENSSL_ROOT_DIR=${DEST_DIR}
 
 # Installs All Components
 RUN DEBIAN_FRONTEND=noninteractive \
@@ -47,8 +47,8 @@ RUN DEBIAN_FRONTEND=noninteractive \
     unzip -qq -o ${LIBPKI_PQC_ARCH_FILE} -d ${LIBPKI_TMP_DIR}
 
 RUN DEBIAN_FRONTEND=noninteractive \
-   echo cd "${LIBPKI_PQC_DIR}" > llogs && echo ${BUILD_SCRIPT} "/opt/pqc" "" "libpki" >> llogs && \
-     ls -la ${LIBPKI_PQC_DIR} >> llogs
+   cd "${LIBPKI_PQC_DIR}" && ${BUILD_SCRIPT} "/opt/pqc" "" "libpki"
+
 
 # ==========
 # Final Note
