--- a/Docker/Dockerfile.ubuntu24
+++ b/Docker/Dockerfile.ubuntu24
@@ -20,7 +20,7 @@ ENV LANGUAGE=C
 ENV IDE_BUILD=${DEV_BUILD}
 
 # Update stuff
-RUN DEBIAN_FRONTEND=noninteractive apt-get update --fix-missing
+RUN DEBIAN_FRONTEND=noninteractive apt-get update -y --fix-missing
 
 # Install missing development tools
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y --fix-missing \
