Updated scripts to allow for docker images push but the base image which is just an ubuntu24 with not much more value added after that.

--- a/Docker/Dockerfile.ubuntu24
+++ b/Docker/Dockerfile.ubuntu24
@@ -105,6 +105,9 @@ WORKDIR /workspace
 # Environment
 ENV NODE_ENV=DEV
 
+# Reference to the repository where the Docker image is stored
+LABEL org.opencontainers.image.source=https://github.com/openca/docker-dev
+
 # ==========
 # Final Note
 # ==========
